[DT-1094][risk=no] Add Pods the user can access (#9456)
* pod api added

* ui impl and api bind

* removed comment

* testcase- updated